--- a/src/styles/pages/home/_contact-section.scss
+++ b/src/styles/pages/home/_contact-section.scss
@@ -203,7 +203,7 @@ html[dir='rtl']
   .section-content
   .contact-form
   .phone-number
-  .fa {
+  .fas {
   -webkit-transform: rotateY(180deg) translateY(-50%);
   transform: rotateY(180deg) translateY(-50%);
 }
